--- a/00_Classes.ipynb
+++ b/00_Classes.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/aranlemaur/Basics-Tutorial/blob/main/00_Classes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/aranlemaur/Big-Data/blob/main/00_Classes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -54,14 +54,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "IDCEKDW7nrFw"
       },
       "outputs": [],
       "source": [
         "# OBJECTS\n",
-        "class Human:\n",
+        "class Human: # we are defining what a human does\n",
         "  def speak(this):\n",
         "    print('bye bye')\n",
         "  def jump(this):\n",
@@ -69,22 +69,6 @@
         "  def eat(this, food):\n",
         "    return food-1"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# linear sequence\n",
-        "# Fibonacci\n",
-        "# -1 1\n",
-        "# 0 - first\n",
-        "# 1 \n",
-        "# 1, 2, 3, 5, 8, 13......."
-      ],
-      "metadata": {
-        "id": "HTDX4AQNouEX"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -104,8 +88,8 @@
     {
       "cell_type": "code",
       "source": [
-        "myprinter = Printer()\n",
-        "myprinter.hello()"
+        "myprinter = Printer() # this means that we are calling the class Printer() under the var myprinter\n",
+        "myprinter.hello() # and within that class now we want to print the def hello(), not bye()"
       ],
       "metadata": {
         "colab": {
@@ -128,7 +112,7 @@
     {
       "cell_type": "code",
       "source": [
-        "myprinter.bye(\"tada\")"
+        "myprinter.bye(\"tada\") # it's tada because the text is random. SO always remember that for a class to be printed, we need to call it!"
       ],
       "metadata": {
         "colab": {
@@ -164,47 +148,24 @@
       "metadata": {
         "id": "uFgp6XVwvf29"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "john = Human()\n"
+        "john = Human() # this means that we are calling the class Human() under the var john\n"
       ],
       "metadata": {
         "id": "FWOHd0WHww3J"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(dir(john))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "laWYwPh6w60S",
-        "outputId": "195e00b1-1c71-41db-87ba-c95ecb0a6c6c"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'getLimbCount', 'noseCount', 'tailCount']\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "john.getLimbCount()"
+        "john.getLimbCount() # and within that class we're printing the limbCount() def"
       ],
       "metadata": {
         "colab": {
@@ -228,10 +189,250 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "%%writefile script.py\n",
+        "class LinearSeries:\n",
+        "  def __iter__(self): #it's built in, means \"iteration\"\n",
+        "    self.num = 1 # starting point, we have said this is 0, but it can start from anywhere.\n",
+        "    return self\n",
+        "  def __next__(self): # now, after iterating, we propagate the iteration\n",
+        "    self.num = self.num + 1 # how to calculate the next element\n",
+        "    return self.num"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yJfWCgJk64QN",
+        "outputId": "6b18b497-49ed-435f-bdb3-f77f77d2d1d6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing script.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Iterators\n",
+        "class LinearSeries:\n",
+        "  def __iter__(self):\n",
+        "    self.num = 0 # starting point\n",
+        "    return self\n",
+        "  def __next__(self):\n",
+        "    self.num = self.num + 1 # how to calculate the next element\n",
+        "    return self.num"
       ],
       "metadata": {
         "id": "bFvs7-WXxxDC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile -a script.py\n",
+        "myseries = LinearSeries()\n",
+        "randompointer = iter(myseries)\n",
+        "# the starting point of series"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B6biagZl5KwW",
+        "outputId": "f87f1578-8f46-469c-c247-b7c1540eb401"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Appending to script.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "next(randompointer)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uLAAA2Ol5UrW",
+        "outputId": "c7bdb124-d9bd-4368-9d73-faf3c439585c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "next(randompointer)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qqDydAqJ5XZE",
+        "outputId": "56ed4411-95d5-49dd-9ec1-b80ee06a1bc5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "next(randompointer)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1xEGW-zt5bKx",
+        "outputId": "9eb94463-0c64-4c36-e7ee-04f57b4830b7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile -a script.py\n",
+        "for i in range(10):\n",
+        "  print(next(randompointer))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EdzGiT-55blm",
+        "outputId": "a292fa02-474c-4574-ecd0-f10cda6e4d46"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing script.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# every_element = sum of previous two elements\n",
+        "class Fibonacci:\n",
+        "  def __iter__(self):\n",
+        "    self.first = -1\n",
+        "    self.second = 1\n",
+        "    return self\n",
+        "  def __next__(self):\n",
+        "    self.third = self.first + self.second\n",
+        "    self.first = self.second\n",
+        "    self.second = self.third\n",
+        "    return self.third\n",
+        "    # -1 + 1 = 0\n",
+        "    # next-> +1 + 0\n"
+      ],
+      "metadata": {
+        "id": "uhHP5OeJ77lj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "myseries = Fibonacci()\n",
+        "mynums = iter(myseries)\n",
+        "for i in range(10):\n",
+        "  print(next(mynums))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oCqsBKjJ9Wsv",
+        "outputId": "26e0f3c1-c605-4413-b53b-ad514710c93f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n",
+            "21\n",
+            "34\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# first second third\n",
+        "# -1      1       0\n",
+        "# 1       0       1\n",
+        "#. 0      1       1\n",
+        "# 1        1      2\n",
+        "#. ...."
+      ],
+      "metadata": {
+        "id": "gOqdqvJ_86p0"
       },
       "execution_count": null,
       "outputs": []
