--- a/Project_Practice_1.ipynb
+++ b/Project_Practice_1.ipynb
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 3,
       "metadata": {
         "id": "CJ3e1jEm9RfT"
       },
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "MvFd13fF9rju"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "CdJr68869RfW"
       },
@@ -95,9 +95,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VCRQYT0R-spk",
-        "outputId": "5d1b8f94-a707-4ea5-e119-eec804ff19a5"
+        "outputId": "c684f816-7930-4e01-f519-d3361f9f29de"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -107,7 +107,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 6
         }
       ]
     },
@@ -121,9 +121,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hI_c-aZR-l8O",
-        "outputId": "195eefee-c673-4bb9-9108-796fd1a4de1f"
+        "outputId": "31543cf3-5033-4395-a0e5-7343edbf6b37"
       },
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,9 +184,9 @@
           "height": 235
         },
         "id": "xYT0OL8T-n4f",
-        "outputId": "b88614b9-1f49-4f66-8451-04b0053f4882"
+        "outputId": "8c8ae5d8-2880-436d-d142-3009fb17e070"
       },
-      "execution_count": 13,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -210,7 +210,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fd7053ee-1b2f-4d1d-9367-5ba4d7a6bcff\">\n",
+              "  <div id=\"df-2945bfb5-b6e4-40d6-901a-54844e546b4b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -378,7 +378,7 @@
               "</table>\n",
               "<p>5 rows × 33 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fd7053ee-1b2f-4d1d-9367-5ba4d7a6bcff')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2945bfb5-b6e4-40d6-901a-54844e546b4b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -429,12 +429,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-fd7053ee-1b2f-4d1d-9367-5ba4d7a6bcff button.colab-df-convert');\n",
+              "          document.querySelector('#df-2945bfb5-b6e4-40d6-901a-54844e546b4b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-fd7053ee-1b2f-4d1d-9367-5ba4d7a6bcff');\n",
+              "          const element = document.querySelector('#df-2945bfb5-b6e4-40d6-901a-54844e546b4b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -457,7 +457,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 8
         }
       ]
     },
@@ -472,14 +472,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
         },
         "id": "CI9a7_zL9RfX",
-        "outputId": "084e5188-cf3e-40ea-e3d8-d4555ccf4e5c"
+        "outputId": "14681a76-b9a6-4543-d696-32daa0b7fce9"
       },
       "outputs": [
         {
@@ -516,7 +516,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-506f38da-f2e3-4ff6-a00d-23a99c4700c1\">\n",
+              "  <div id=\"df-a52edf03-8362-4df6-88f4-5359b14d7992\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -720,7 +720,7 @@
               "</table>\n",
               "<p>395 rows × 12 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-506f38da-f2e3-4ff6-a00d-23a99c4700c1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a52edf03-8362-4df6-88f4-5359b14d7992')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -771,12 +771,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-506f38da-f2e3-4ff6-a00d-23a99c4700c1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-a52edf03-8362-4df6-88f4-5359b14d7992 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-506f38da-f2e3-4ff6-a00d-23a99c4700c1');\n",
+              "          const element = document.querySelector('#df-a52edf03-8362-4df6-88f4-5359b14d7992');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -799,7 +799,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 9
         }
       ],
       "source": [
@@ -818,7 +818,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 10,
       "metadata": {
         "id": "L2v-_3Ec9RfY"
       },
@@ -838,14 +838,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
         },
         "id": "YAb7OBLa9RfZ",
-        "outputId": "6db62293-ede5-464f-fc8c-db03012e8b5d"
+        "outputId": "5f90a53e-8301-4345-a0b7-fc713b855bd7"
       },
       "outputs": [
         {
@@ -882,7 +882,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ca79418b-1870-451b-8b87-b3a79da15888\">\n",
+              "  <div id=\"df-af98ba49-5327-451b-8745-d845cf3dee85\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1086,7 +1086,7 @@
               "</table>\n",
               "<p>395 rows × 12 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ca79418b-1870-451b-8b87-b3a79da15888')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-af98ba49-5327-451b-8745-d845cf3dee85')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1137,12 +1137,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ca79418b-1870-451b-8b87-b3a79da15888 button.colab-df-convert');\n",
+              "          document.querySelector('#df-af98ba49-5327-451b-8745-d845cf3dee85 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ca79418b-1870-451b-8b87-b3a79da15888');\n",
+              "          const element = document.querySelector('#df-af98ba49-5327-451b-8745-d845cf3dee85');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1165,12 +1165,17 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 13
         }
       ],
       "source": [
         "df = df.apply(lambda x: x.str.upper() if x.name in ['Mjob','Fjob'] else x)\n",
-        "df"
+        "df\n",
+        "\n",
+        "\n",
+        "#to capitalise the first letter using lambda:\n",
+        "#df['Mjob'].apply(capitalizer)\n",
+        "#df['Fjob'].apply(capitalizer)"
       ]
     },
     {
@@ -1184,7 +1189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1444,7 +1449,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "jDctL_A09Rfc"
       },
@@ -1459,7 +1464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1707,7 +1712,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
